--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -1,13 +1,26 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+:root {
+    --fonte01: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte02: "Passion One", sans-serif;
+    --fonte03: "Sriracha", cursive;
+}
+
 * {
     margin: 0px;
-    padding: 0px;
+    padding: 0px;        
 }
 
 html, body {
     min-height: 100vh;
-    background-color: darkgray;
+    background-color: darkgray; 
+    font-family: var(--fonte01);   
 }
 
 header {
@@ -18,7 +31,9 @@ header {
 
 header > h1 {
     padding-top: 50px;
-    font-variant: small-caps;
+    font-variant: small-caps; 
+    font-family: var(--fonte02); 
+    font-size: 10vw;     
 }
 
 header > p {
@@ -40,6 +55,8 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
+    font-family: var(--fonte03); 
+    font-size: 4vw;      
 }
 
 section.normal {
@@ -53,7 +70,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.521);
 }
 
