--- a/exercícios/ex026/mq004/estilos/media-query.css
+++ b/exercícios/ex026/mq004/estilos/media-query.css
@@ -9,6 +9,7 @@ Celular: de 600px até 768px
 Tablet: de 768px até 992px
 Desktop: de 992px até 1200px
 Grandes telas: acima de 1200px
+Extra Grande: acima de 1400px
 */
 
 @media print { /* IMPRESSÃO */
